# rust-course

./: Cargo.toml
src/aula10/: main.rs
src/aula11/: main.rs
src/aula12/: main.rs
src/aula13/: main.rs
src/aula14/: main.rs
src/aula15/: main.rs
src/aula16/: main.rs
src/aula6/: main.rs
src/aula7/: main.rs
src/aula8/: main.rs
src/aula9/: main.rs
